# blog

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  env_example  pyproject.toml
blog/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_remove_post_image_postimage.py  0003_post_author.py  0004_alter_post_slug.py  0005_post_is_featured.py  0006_tag.py  0007_post_tags.py  0008_category_post_category.py  0009_category_slug.py  0010_alter_category_slug.py  0011_alter_category_slug.py  0012_comment.py  0013_comment_parent.py  0014_comment_is_active_post_is_active_alter_tag_name_and_more.py
blog/templatetags/: custom_filters.py
blog/tests/: test_models.py
config/: settings.py  urls.py
config/utils/: slugify_utils.py
static/css/: plugins.css  style.css
static/js/: plugins.js  scripts.js
templates/: 404.html  about.html  base.html  contact.html  gallery.html  index.html  login.html  post-list.html  post-single.html  user-dashboard.html  user-profile-update.html  user-register.html
templates/partials/: category-navigation.html  footer.html  header.html  main-sidebar.html  pagination.html
users/: admin.py  forms.py  models.py  urls.py  user_manager.py  views.py  writer.py
users/migrations/: 0001_initial.py  0002_userprofile_avatar_userprofile_nickname.py  0003_alter_userprofile_user.py  0004_alter_userprofile_user.py  0005_alter_userprofile_user.py  0006_alter_userprofile_first_name_and_more.py  0007_userprofile_about_me.py
users/tests/: test_models.py
