[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "bandit>=1.8.3",
    "django>=5.2.1",
    "pillow>=11.2.1",
    "pre-commit>=4.2.0",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]


[tool.ruff]
exclude = [
    ".venv",
    ".ruff_cache/",
    "__pypackages__/",
    "venv/",
    "migrations/",
]

[tool.ruff.format]
quote-style = "single"
